# nvidia-checker-rs

./: Cargo.toml  LICENSE  README.md
config/: test.toml
src/: lib.rs
