[package]
name = "nvidia-checker"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Check CLI for NVIDIA software environment"
authors = ["scepter914 <scepter914@gmail.com>"]
readme = "README.md"

documentation = "https://docs.rs/nvidia-checker"
repository = "https://github.com/scepter914/nvidia-checker-rs"
categories = ["cli", "nvidia"]

[dependencies]
carrot_utils = "0.1.3"
log = "0.4.20"
toml = "0.8.8"
serde_derive = "1.0.195"
serde = "1.0.195"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
chrono = "0.4.33"
